Change to Fabbxible Logo

--- a/tool/DGUS_TOOL_V8.0.1.1/Config_Font/Terminal.ini
+++ b/tool/DGUS_TOOL_V8.0.1.1/Config_Font/Terminal.ini
@@ -130,4 +130,4 @@ icoANDtxt5=0
 icoANDtxt6=0
 
 [TFTPRJ]
-Prj1=Z:/Dev/CR-6-touchscreen/src/DWIN/Project.dgus
+Prj1=C:/Users/Lenovo/Documents/GitHub/CR-6-touchscreen/src/DWIN/Project.dgus
