--- a/tool/DGUS_TOOL_V8.0.1.1/SystemConfig.ini
+++ b/tool/DGUS_TOOL_V8.0.1.1/SystemConfig.ini
@@ -322,4 +322,4 @@ reNameImageConversion=ReName Images Conversion
 readVccGroup=Read VCC
 
 [DefaultPath]
-imageDefaultPath=Z:/Dev/CR-6-touchscreen/src/DWIN/DWIN_SOURCE
+imageDefaultPath=C:/Users/Lenovo/Documents/GitHub/CR-6-touchscreen/src/images
