--- a/tool/DGUS_TOOL_V8.0.1.1/Config/Terminal.ini
+++ b/tool/DGUS_TOOL_V8.0.1.1/Config/Terminal.ini
@@ -131,5 +131,4 @@ icoANDtxt5=0
 icoANDtxt6=0
 
 [TFTPRJ]
-Prj1=Z:/Dev/CR-6-touchscreen/src/DWIN/Project.dgus
-Prj2=Z:/Dev/Marlin_DGUS_Resources-master/test.dgus
+Prj1=C:/Users/Lenovo/Documents/GitHub/CR-6-touchscreen/src/DWIN/Project.dgus
